--- a/shopweb/web/accountsettings.html
+++ b/shopweb/web/accountsettings.html
@@ -11,7 +11,7 @@
 <body>
   <div id="content" class="center page">
     <div>
-      <a href="/"><span class="sprite sprite-home home" /></a>
+      <a href="/"><span class="sprite sprite-back home" /></a>
     </div>
     <div class="tab_select">
       <ul id="settings_tab" class="create_product_tab">
