--- a/shopweb/web/product.html
+++ b/shopweb/web/product.html
@@ -26,7 +26,7 @@
   <div id="content" class="center page">
     <div class="product_content">
       <div class="navigation">
-        <a href="/"><span class="sprite sprite-home" /></a> <span>/</span> <span><div data-snip="catlink"></div></span>
+        <a href="/"><span class="sprite sprite-back" /></a> <span>/</span> <span><div data-snip="catlink"></div></span>
       </div>
       <div id="pleft">
         <div data-snip="images">
