--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -15,9 +15,8 @@
 
 <body>
 
-  <div id="content" class="center page">
-
-    <div class="controls">
+  <div id="content_head" class="controls">
+    <div class="center">
       <div class="home">
         <a href="/"><span class="sprite sprite-back" /></a>
       </div>
@@ -31,6 +30,9 @@
         </select>
       </div>
     </div>
+  </div>
+  <div id="content" class="center products_page">
+
 
     <div id="product_dialog"></div>
 
