--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -85,8 +85,8 @@
 
               <div id="create_specs" class="form_specs tab_content">
                 <div>
-                  <div class="specs_title" data-loc="add.specs"></div>
-                  <span id="add_prop" class="clickable sprite sprite-plus" />
+                  <div id="add_prop" class="clickable sprite sprite-plus left"></div>
+                  <div class="specs_title left10" data-loc="add.specs"></div>
                 </div>
                 <div id="prop_fields" class="row"></div>
               </div>
@@ -94,10 +94,12 @@
               <div id="create_customize" class="form_specs tab_content">
                 <ul>
                   <li>
-                    <div class="specs_title" data-loc="add.options"></div> <span id="add_custom_prop" class="clickable sprite sprite-plus" />
+                    <div id="add_custom_prop" class="clickable sprite sprite-plus left"></div>
+                    <div class="specs_title left10" data-loc="add.options"></div> 
                   </li>
                   <li>
-                    <div class="specs_title" data-loc="add.text"></div> <span id="add_custom_text" class="clickable sprite sprite-plus" />
+                    <div id="add_custom_text" class="clickable sprite sprite-plus left" ></div>
+                    <div class="specs_title left10" data-loc="add.text"></div> 
                   </li>
                 </ul>
                 <div id="prop_custom_fields" class="row"></div>
