--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -18,7 +18,8 @@
   <div id="content_head" class="controls">
     <div class="center">
       <div class="home">
-        <a href="/"><span class="sprite sprite-back" /></a>
+        <a href="/"> <i class="fa fa-arrow-left fa-2x"></i>
+        </a>
       </div>
       <div class="navigation">
         <span data-loc="sort"></span> <select id="sortSelect" data-placeholder="...">
@@ -95,11 +96,11 @@
                 <ul>
                   <li>
                     <div id="add_custom_prop" class="clickable sprite sprite-plus left"></div>
-                    <div class="specs_title left10" data-loc="add.options"></div> 
+                    <div class="specs_title left10" data-loc="add.options"></div>
                   </li>
                   <li>
-                    <div id="add_custom_text" class="clickable sprite sprite-plus left" ></div>
-                    <div class="specs_title left10" data-loc="add.text"></div> 
+                    <div id="add_custom_text" class="clickable sprite sprite-plus left"></div>
+                    <div class="specs_title left10" data-loc="add.text"></div>
                   </li>
                 </ul>
                 <div id="prop_custom_fields" class="row"></div>
