--- a/shopweb/web/accountsettings.html
+++ b/shopweb/web/accountsettings.html
@@ -4,15 +4,12 @@
 <script type="text/javascript" src="/static/js/accountsettings.js"></script>
 
 <title>idid.ro - Setari cont utilizator</title>
-<meta name="description" content="Setati aici datele utilizatorului, schimbare parola, adaugare adrese etc."/>
+<meta name="description" content="Setati aici datele utilizatorului, schimbare parola, adaugare adrese etc." />
 
 </head>
 
 <body>
   <div id="content" class="center page">
-    <div>
-      <a href="/"><span class="sprite sprite-back home" /></a>
-    </div>
     <div class="tab_select">
       <ul id="settings_tab" class="create_product_tab">
         <li data-permissions="write"><a href="#pending_orders" data-loc="orders"></a></li>
@@ -26,7 +23,7 @@
     <div id="account">
       <div class="row_simple top20">
         <form action="/update/settings" id="updatesettings_form" method="POST" data-snip="settingsForm">
-          <div class="column left30 userinputs">
+          <div class="column userinputs">
             <div class="accordion">
               <div class="accordion_title clickable">
                 <a href="#" data-loc="person"></a>
@@ -84,8 +81,8 @@
                 </div>
               </div>
 
-              <div>
-                <div class="row bordertop top20 paddingtop10">
+              <div class="bordertop paddingtop10 paddingbottom10">
+                <div class="row">
                   <a id="update_user" class="btn" href="#" data-loc="save"></a> <a id="delete_user" class="btn" href="#" data-loc="delete.user"></a>
                 </div>
               </div>
