--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -71,12 +71,14 @@
                     <label for="create_keywords" data-loc="keywords"></label> <input id="create_keywords" type="text" name="create_keywords" />
                   </div>
                   <div class="row">
-                    <label for="create_stock" data-loc="stock"></label> <input id="create_stock" type="text" name="create__stock" />
+                    <label for="create_stock" data-loc="stock"></label> <input id="create_stock" type="text" name="create_stock" />
+                  </div>
+                  <div class="row">
+                    <label for="create_pos" data-loc="list.pos"></label> <input id="create_pos" type="text" name="create_position" />
                   </div>
                   <div class="row unique_prod">
                     <input id="create_unique" type="checkbox" name="create_unique" /> <label for="create_unique" data-loc="unique.product"></label>
                   </div>
-
                 </div>
               </div>
 
