--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -15,7 +15,7 @@
 
 <body>
 
-  <div id="content_head" class="controls">
+  <div id="content_head" class="row controls">
     <div class="center">
       <div class="navigation">
         <span data-loc="sort"></span> <select id="sortSelect" data-placeholder="...">
@@ -28,6 +28,7 @@
       </div>
     </div>
   </div>
+
   <div id="content" class="center products_page">
 
 
