--- a/shopweb/web/categories.html
+++ b/shopweb/web/categories.html
@@ -6,13 +6,17 @@
 <script type="text/javascript" src="/static/js/categories.js"></script>
 
 <title>idid.ro - Produse handmade de calitate</title>
-<meta name="description" content="O gama variata de produse lucrate manual (handmade) : Bijuterii, jucarii, tablouri, vase ceramice si sticla, ceasuri, genti, perne etc."/>
+<meta name="description"
+  content="O gama variata de produse lucrate manual (handmade) : Bijuterii, jucarii, tablouri, vase ceramice si sticla, ceasuri, genti, perne etc." />
 
 </head>
 
 <body>
   <div id="content" class="center page">
-    <div id="item_list">
+    <div id="item_list"></div>
+
+    <div id="presentation">
+      <ul data-snip="presentation"></ul>
     </div>
 
     <div id="category_create_dialog" data-permissions="write">
