--- a/shopweb/web/categories.html
+++ b/shopweb/web/categories.html
@@ -16,7 +16,11 @@
     <div id="item_list"></div>
 
     <div id="presentation">
-      <ul data-snip="presentation"></ul>
+      <ul>
+        <li data-snip="presentation"><a href="pid">
+            <div class="pres_item_box"></div>
+        </a></li>
+      </ul>
     </div>
 
     <div id="category_create_dialog" data-permissions="write">
