--- a/shopweb/web/product.html
+++ b/shopweb/web/product.html
@@ -3,6 +3,7 @@
 <script type="text/javascript" src="/static/js/product.js"></script>
 <script type="text/javascript" src="/static/js/jquery.elevateZoom-3.0.8.min.js"></script>
 <script type="text/javascript" src="/static/js/textile.js"></script>
+<script type="text/javascript" src="/static/js/admin.js" data-permissions="write"></script>
 
 <meta data-snip="fb_meta">
 
