--- a/shopweb/web/categories.html
+++ b/shopweb/web/categories.html
@@ -4,7 +4,7 @@
 <script type="text/javascript" src="/static/js/admin.js" data-permissions="write"></script>
 <script type="text/javascript" src="/static/js/categories.js"></script>
 
-<title>idid.ro - Produse handmade de calitate</title>
+<title>idid.ro</title>
 <meta name="description"
   content="O gama variata de produse lucrate manual (handmade) : Bijuterii, jucarii, tablouri, vase ceramice si sticla, ceasuri, genti, perne etc." />
 
