--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -6,7 +6,7 @@
 <script type="text/javascript" src="/static/js/admin.js" data-permissions="write"></script>
 <script type="text/javascript" src="/static/js/products.js"></script>
 
-<title>idid.ro - Produse handmade de calitate</title>
+<title>idid.ro</title>
 <meta name="description"
   content="O gama variata de produse lucrate manual (handmade) : Bijuterii, jucarii, tablouri, vase ceramice si sticla, ceasuri, genti, perne etc." />
 
@@ -30,8 +30,9 @@
 
   <div id="content" class="center products_page">
 
+
     <div id="product_create_dialog">
-      <div class="product_content quickview">
+      <div class="product_content_simple quickview">
         <div class="title_dialog" data-loc="new.product"></div>
         <div class="close_product_dialog">
           <span class="sprite sprite-close" />
