--- a/shopweb/web/categories.html
+++ b/shopweb/web/categories.html
@@ -5,9 +5,7 @@
 <script type="text/javascript" src="/static/js/categories.js"></script>
 
 <title>idid.ro</title>
-<meta name="description"
-  content="O gama variata de produse lucrate manual (handmade) : Bijuterii, jucarii, tablouri, vase ceramice si sticla, ceasuri, genti, perne etc." />
-
+<meta name="description" content="Categorii produse" />
 </head>
 
 <body>
