--- a/shopweb/web/product.html
+++ b/shopweb/web/product.html
@@ -20,7 +20,7 @@
 </meta>
 
 <title>idid.ro</title>
-<meta name="description" content="O gama variata de produse lucrate manual (handmade) : Bijuterii, jucarii, tablouri, vase ceramice si sticla, ceasuri, genti, perne etc."/>
+<meta name="description" content=""/>
 
 </head>
 
