--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -7,8 +7,7 @@
 <script type="text/javascript" src="/static/js/products.js"></script>
 
 <title>idid.ro</title>
-<meta name="description"
-  content="O gama variata de produse lucrate manual (handmade) : Bijuterii, jucarii, tablouri, vase ceramice si sticla, ceasuri, genti, perne etc." />
+<meta name="description" content="Produse" />
 
 </head>
 
