--- a/shopweb/web/onsale.html
+++ b/shopweb/web/onsale.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
-  <div id="content" class="center page"></div>
+  <div id="content" class="center page">
+
+    <div id="item_list"></div>
+  </div>
 </body>
 </html>
