--- a/shopweb/web/terms.html
+++ b/shopweb/web/terms.html
@@ -18,7 +18,7 @@
         </p>
         <p>
           <strong>www.idid.ro</strong>&amp;nbsp;este administrat de&amp;nbsp;<br /><strong>SC IDID SHOP
-            SRL&amp;nbsp;cu sediul in Cluj Napoca,&amp;nbsp;Strada Branului nr.23, Inregistrata la Registrul Comertului cu nr J12/2326/2014,
+            SRL&amp;nbsp;cu sediul in Cluj Napoca, Inregistrata la Registrul Comertului cu nr J12/2326/2014,
             CUI&amp;nbsp;33444450, capital social 200RON.</strong>
         </p>
         <p>
