--- a/shopweb/web/mobile/products.html
+++ b/shopweb/web/mobile/products.html
@@ -9,15 +9,14 @@
 	<div id="content">
 		<div class="products">
 			<ul>
-				<li data-snip="products">
-					<div>
-						<div id="prod_pic"></div>
+				<li data-snip="products"><a href="#" class="prod_link">
+						<div class="prod_pic"></div>
 						<div class="prod_content">
-							<div id="prod_title"></div>
-							<div id="prod_price"></div>
+							<div class="prod_title"></div>
+							<div class="btn" data-loc="add.to.basket"></div>
+							<div class="prod_price"></div>
 						</div>
-					</div>
-				</li>
+				</a></li>
 			</ul>
 		</div>
 	</div>
