--- a/shopweb/web/mobile/product.html
+++ b/shopweb/web/mobile/product.html
@@ -3,12 +3,35 @@
 <title>idid.ro</title>
 <meta name="description" content="Detalii produs" />
 
+<link href="/static/mobile/css/jquery.bxslider.css" rel="stylesheet" />
+
+<style>
+.bx-wrapper .bx-viewport {
+	box-shadow: none;
+}
+</style>
+<script src="/static/mobile/js/jquery.bxslider.min.js"></script>
+
+<script>
+	(function() {
+		$(function() {
+			$('#slider').bxSlider({
+				touchEnabled : true,
+				infiniteLoop : true
+			});
+		})
+	})();
+</script>
 </head>
 
 <body>
 	<div id="content">
 		<div class="product" data-snip="item">
-			<div class="prod_pic"></div>
+			<div id="prod_view">
+				<ul id="slider">
+					<li class="prod_pic"></li>
+				</ul>
+			</div>
 			<div class="prod_header">
 				<div class="prod_title"></div>
 				<div class="prod_price"></div>
