--- a/shopweb/web/mobile/product.html
+++ b/shopweb/web/mobile/product.html
@@ -37,7 +37,7 @@
 				<div class="prod_price"></div>
 			</div>
 			<div class="prod_controls">
-				<div class="btn" data-loc="add.to.basket"></div>
+				<div class="btn" data-loc="add.to.cart"></div>
 			</div>
 			<div class="prod_desc"></div>
 		</div>
