--- a/shopweb/web/mobile/products.html
+++ b/shopweb/web/mobile/products.html
@@ -13,7 +13,7 @@
 						<div class="prod_pic"></div>
 						<div class="prod_content">
 							<div class="prod_title"></div>
-							<div class="btn" data-loc="add.to.basket"></div>
+							<div class="btn" data-loc="add.to.cart"></div>
 							<div class="prod_price"></div>
 						</div>
 				</a></li>
