--- a/shopweb/web/mobile/cart.html
+++ b/shopweb/web/mobile/cart.html
@@ -8,6 +8,25 @@
 	(function() {
 		$(function() {
 			$('#menu').tabify();
+
+			$('.prod_remove').click(function(e) {
+				var id = $(this).parent().parent().attr('id');
+				window.cart.removeItem(id.substring(4));
+				window.location.href = '/mobile/cart';
+				e.preventDefault();
+				false;
+			});
+
+			$('.products ul li input').each(function(index) {
+
+				$(this).on('change', function(e) {
+					window.cart.setItemCount(index, $(this).val());
+					window.location.href = '/mobile/cart';
+					e.preventDefault();
+					return false;
+				});
+			});
+
 		})
 	})();
 </script>
@@ -18,18 +37,23 @@
 
 		<div class="products">
 			<ul>
-				<li data-snip="products"><a href="#" class="prod_link">
-						<div class="prod_pic"></div>
-						<div class="prod_content">
-							<div class="prod_title"></div>
-							<div class="prod_number">
-								<label id="" data-loc="quantity"></label> <input type="text" />
-							</div>
-							<div class="prod_price"></div>
+				<li data-snip="products">
+					<div class="prod_pic"></div>
+					<div class="prod_content">
+						<div class="prod_title"></div>
+						<div class="prod_number">
+							<label id="" data-loc="quantity"></label> <input type="text" />
 						</div>
-				</a></li>
+						<div class="prod_remove btn" data-loc="delete"></div>
+						<div class="prod_price"></div>
+					</div>
+				</li>
 			</ul>
 
+		</div>
+		<div>
+			<span data-loc="total"></span> <span class="left10" data-snip="total"></span><span
+				class="left10">Lei</span>
 		</div>
 		<div class="cart_view">
 			<ul id="menu" class="menu">
