--- a/shopweb/web/mobile/cart.html
+++ b/shopweb/web/mobile/cart.html
@@ -51,6 +51,66 @@
 			change();
 			remove();
 
+			$('#step2').click(function(e) {
+				$('#step2').hide();
+				$('#cart_items').hide();
+				$('#step1').show();
+				$('#step3').show();
+				$('#order_info').show();
+				e.preventDefault();
+				false;
+			});
+
+			$('#step1').click(function(e) {
+				$('#step1').hide();
+				$('#order_info').hide();
+				$('#step3').hide();
+				$('#step2').show();
+				$('#cart_items').show();
+				e.preventDefault();
+				false;
+			});
+
+			$('#step3').click(function(ev) {
+				var form = '#order_form';
+
+				var formObj = {};
+				var obj = $(form).serializeArray();
+
+				$.each(obj, function() {
+					formObj[this.name] = this.value;
+				});
+
+				var items = cart.items();
+				formObj['items'] = [];
+				for (e in items) {
+					formObj['items'].push({
+						name : items[e].id,
+						value : items[e].count
+					})
+				}
+
+				$.ajax({
+					url : '/order',
+					contentType : 'application/json; charset=UTF-8',
+					data : JSON.stringify(formObj),
+					cache : false,
+					timeout : 3000,
+					type : 'POST',
+					statusCode : {
+						403 : function(msg) {
+							var data = JSON.parse(msg.responseText);
+							if (data.errors) {
+								window.cart.showFormErrors(data.errors);
+							}
+						}
+					}
+				});
+
+				ev.preventDefault();
+				false;
+			});
+
 		})
 	})();
 </script>
@@ -58,10 +118,13 @@
 
 <body>
 	<div id="content">
+		<div id="step2" class="width100 btn" data-loc="buy_step1"></div>
+		<div id="step1" class="width100 btn" data-loc="buy_step0"></div>
 
 		<div data-snip="cartItems"></div>
 
-		<div class="cart_view">
+
+		<div id="order_info">
 			<ul id="menu" class="menu">
 				<li class="active"><a href="#pf" data-loc="person"></a></li>
 				<li><a href="#pj" data-loc="company"></a></li>
@@ -108,6 +171,12 @@
 						<label for="zip" data-loc="zip"></label><input id="zip" name="zip"
 							type="text" />
 					</div>
+					<div class="row">
+						<select id="transport_pf" class="transport" name="transport">
+							<option value="1" data-loc="transport.1"></option>
+							<option value="2" data-loc="transport.2"></option>
+						</select>
+					</div>
 
 					<div class="row">
 						<input id="terms" name="terms" type="checkbox" /> <label
@@ -116,65 +185,76 @@
 
 				</form>
 			</div>
-		</div>
-		<div id="pj">
-			<form id="order_form_company" class="cart_form">
-				<div class="row">
-					<label for="cname" data-loc="company.name"></label><input
-						id="cname" name="cname" type="text" />
-				</div>
-				<div class="row">
-					<label for="cif" data-loc="company.cif"></label><input id="cif"
-						name="cif" type="text" />
-				</div>
-				<div class="row">
-					<label for="cregcom" data-loc="company.reg.com"></label><input
-						id="cregcom" name="cregcom" type="text" />
-				</div>
-				<div class="row">
-					<label for="cbank" data-loc="company.bank"></label><input
-						id="cbank" name="cbank" type="text" />
-				</div>
-				<div class="row">
-					<label for="cbankaccount" data-loc="company.bank.account"></label><input
-						id="cbankaccount" name="cbankaccount" type="text" />
-				</div>
-				<div class="row">
-					<label for="cemail" data-loc="email"></label><input id="cemail"
-						name="cemail" type="text" />
-				</div>
-				<div class="row">
-					<label for="cphone" data-loc="phone"></label><input id="cphone"
-						name="cphone" type="text" />
-				</div>
-				<div class="row height40">
-					<span class="btn left_arrow">&#x2190;</span> <span
-						class="address_name"></span> <span class="btn right_arrow">&#x2192;</span>
-				</div>
-				<div class="row">
-					<label for="cregion" data-loc="region"></label><input id="cregion"
-						name="cregion" type="text" />
-				</div>
-				<div class="row">
-					<label for="ccity" data-loc="city"></label><input id="ccity"
-						name="ccity" type="text" />
-				</div>
-				<div class="row">
-					<label for="caddress" data-loc="address"></label><input
-						id="caddress" name="caddress" type="text" />
-				</div>
-				<div class="row">
-					<label for="czip" data-loc="zip"></label><input id="czip"
-						name="czip" type="text" />
-				</div>
-				<div class="row">
-					<div id="terms_wrapper">
-						<input id="cterms" name="terms" type="checkbox" /> <label
-							for="cterms" data-loc="terms.and.conds"></label>
+			<div id="pj">
+				<form id="order_form_company" class="cart_form">
+					<div class="row">
+						<label for="cname" data-loc="company.name"></label><input
+							id="cname" name="cname" type="text" />
 					</div>
-				</div>
-			</form>
+					<div class="row">
+						<label for="cif" data-loc="company.cif"></label><input id="cif"
+							name="cif" type="text" />
+					</div>
+					<div class="row">
+						<label for="cregcom" data-loc="company.reg.com"></label><input
+							id="cregcom" name="cregcom" type="text" />
+					</div>
+					<div class="row">
+						<label for="cbank" data-loc="company.bank"></label><input
+							id="cbank" name="cbank" type="text" />
+					</div>
+					<div class="row">
+						<label for="cbankaccount" data-loc="company.bank.account"></label><input
+							id="cbankaccount" name="cbankaccount" type="text" />
+					</div>
+					<div class="row">
+						<label for="cemail" data-loc="email"></label><input id="cemail"
+							name="cemail" type="text" />
+					</div>
+					<div class="row">
+						<label for="cphone" data-loc="phone"></label><input id="cphone"
+							name="cphone" type="text" />
+					</div>
+					<div class="row height40">
+						<span class="btn left_arrow">&#x2190;</span> <span
+							class="address_name"></span> <span class="btn right_arrow">&#x2192;</span>
+					</div>
+					<div class="row">
+						<label for="cregion" data-loc="region"></label><input id="cregion"
+							name="cregion" type="text" />
+					</div>
+					<div class="row">
+						<label for="ccity" data-loc="city"></label><input id="ccity"
+							name="ccity" type="text" />
+					</div>
+					<div class="row">
+						<label for="caddress" data-loc="address"></label><input
+							id="caddress" name="caddress" type="text" />
+					</div>
+					<div class="row">
+						<label for="czip" data-loc="zip"></label><input id="czip"
+							name="czip" type="text" />
+					</div>
+					<div class="row">
+						<select id="transport_pj" class="transport" name="transport">
+							<option value="1" data-loc="transport.1"></option>
+							<option value="2" data-loc="transport.2"></option>
+						</select>
+					</div>
+
+
+					<div class="row">
+						<div id="terms_wrapper">
+							<input id="cterms" name="terms" type="checkbox" /> <label
+								for="cterms" data-loc="terms.and.conds"></label>
+						</div>
+					</div>
+				</form>
+			</div>
 		</div>
+
+		<div id="step3" class="width100 btn" data-loc="buy_final"></div>
+
 	</div>
 </body>
 </html>
