--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -83,7 +83,7 @@
                   <div id="add_prop" class="clickable sprite sprite-plus left"></div>
                   <div class="specs_title left10" data-loc="add.specs"></div>
                 </div>
-                <div id="prop_fields" class="row"></div>
+                <div id="prop_fields"></div>
               </div>
 
               <div id="create_textzone" class="form_textzone tab_content">
