--- a/shopweb/web/categories.html
+++ b/shopweb/web/categories.html
@@ -1,51 +1,70 @@
-<html data-template="common">
-<head>
-<script type="text/javascript" src="/static/js/admin.js"
-	data-permissions="write"></script>
-<script type="text/javascript" src="/static/js/categories.js"></script>
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+<!--<![endif]-->
 
-<title>idid.ro</title>
+<head>
+
+<!-- template:headers -->
+
+<title>idid.ro - Categorii de produse lucrate manual</title>
 <meta name="description" content="Categorii produse" />
 </head>
 
 <body>
 
-	<div id="content">
-		<div class="intro" data-animate-effect="fadeIn">
-			<h2>Exclusiv produse create manual</h2>
-			<p>
-				Vei gasi aici bucăți de natură, multă culoare,<br />artă și talent,
-				detalii atent conturate.
-			</p>
-		</div>
+	<div class="box-wrap-all">
+		<div class="box-wrap">
 
-		<div id="fh5co-media-section">
-			<div class="container">
-				<div class="row animate-box">
-					<div class="col-md-8 col-md-offset-2 text-center heading-section">
-						<h3>Selecție atentă de produse</h3>
-						<p>Dorim să promovăm aceste produse, pentru că sunt unice, nu
-							există nicăieri în lume altele. Mai mult, creatorii lor și-au
-							lăsat o parte din suflet în fiecare piesă, iar noi respectăm
-							asta. Te invităm și pe tine sâ o faci!</p>
-					</div>
-				</div>
+			<!-- template:menu -->
 
-
-				<div class="col-md-4 animate-box bg-cat" data-snip="item">
-					<a class="hover">
-						<div class="fh5co-cover">
-							<div class="desc">
-								<h3></h3>
-								<span>Vezi produse</span>
-							</div>
-						</div>
-					</a>
-				</div>
-
+			<div class="intro" data-animate-effect="fadeIn">
+				<h2>Exclusiv produse create manual</h2>
+				<p>
+					Vei gasi aici bucăți de natură, multă culoare,<br />artă și
+					talent, detalii atent conturate.
+				</p>
 			</div>
+
+			<div id="fh5co-media-section">
+				<div class="container">
+					<div class="row animate-box">
+						<div class="col-md-8 col-md-offset-2 text-center heading-section">
+							<h3>Selecție atentă de produse</h3>
+							<p>Dorim să promovăm aceste produse, pentru că sunt unice, nu
+								există nicăieri în lume altele. Mai mult, creatorii lor și-au
+								lăsat o parte din suflet în fiecare piesă, iar noi respectăm
+								asta. Te invităm și pe tine sâ o faci!</p>
+						</div>
+					</div>
+
+					<!-- snip:item -->
+					<div class="col-md-4 animate-box bg-cat">
+						<a class="hover">
+							<div class="fh5co-cover">
+								<div class="desc">
+									<h3></h3>
+									<span>Vezi produse</span>
+								</div>
+							</div>
+						</a>
+					</div>
+					<!-- end -->
+				</div>
+			</div>
+
+
+			<!-- template:footermenu -->
+
 		</div>
+
+		<!-- template:footer -->
 	</div>
+	
+	<!-- template:endscripts -->
 </body>
 </html>
 
