--- a/shopweb/web/product.html
+++ b/shopweb/web/product.html
@@ -50,6 +50,7 @@
 						<div class="row">
 
 							<h2 class="purple">
+							    Preț :
 								<!-- snip:detailPrice -->
 								<span></span>
 								<!-- end -->
