--- a/shopweb/web/product.html
+++ b/shopweb/web/product.html
@@ -48,19 +48,25 @@
 					</div>
 					<div class="row animate-box">
 						<div class="row">
-
-							<h2 class="purple">
-							    Preț :
+							<div class="price">
+								Preț :
 								<!-- snip:detailPrice -->
 								<span></span>
 								<!-- end -->
-							</h2>
-
+							</div>
+							<div>
+								<a id="add_to_cart_box" class="cartt" href="#"> <span class="icon-cart"></span>
+									Adaugă în coș
+								</a>
+							</div>
+							<p/>
 						</div>
 						<div class="row">
-							<!-- snip:details -->
+							<p>
+								<!-- snip:details -->
 							<div></div>
 							<!-- end -->
+							</p>
 						</div>
 						<div class="row">
 							<h2 class="purple">Specificații</h2>
