--- a/shopweb/web/cart.html
+++ b/shopweb/web/cart.html
@@ -27,8 +27,31 @@
 			<div id="fh5co-media-section">
 				<div class="container">
 					<!-- snip:cart_prods -->
-					<div class="row animate-box">
-						<img />
+					<div class="row animate-box cart_item">
+						<div class="img_cont">
+							<img />
+						</div>
+						<div class="details">
+							<div class="row">
+								<span class="prod_desc"></span>
+								<div class="row">
+									Preț <span class="prod_price"></span>
+								</div>
+								<div class="row">
+
+									<span class="select_cont"> <select>
+											<!-- snip:cantities -->
+											<option></option>
+											<!-- end -->
+									</select>
+									</span> <span>buc</span> <span><a id="add_to_cart_box"
+										class="cartt_small" href="#"> Șterge </a></span>
+
+								</div>
+							</div>
+
+
+						</div>
 					</div>
 					<!-- end -->
 					<div class="row animate-box"></div>
