--- a/shopweb/web/cart.html
+++ b/shopweb/web/cart.html
@@ -35,25 +35,117 @@
 							<div class="row">
 								<span class="prod_desc"></span>
 								<div class="row">
-									Preț <span class="prod_price"></span>
-								</div>
-								<div class="row">
-
-									<span class="select_cont"> <select>
+									Preț : <span class="prod_price"></span> 
+									<span> <select>
 											<!-- snip:cantities -->
 											<option></option>
 											<!-- end -->
+									</select> buc
+									</span><span> <a class="cartt_small" href="#">Șterge</a>
+									</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- end -->
+					<div class="row animate-box cart_item">
+						<form id="order_form">
+							<div class="row">
+								<div class="col-md-2">
+									<label for="fname"> <!-- loc:first.name --></label>
+								</div>
+								<div class="col-md-2">
+									<input id="fname" name="fname" type="text" />
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-2">
+									<label for="lname"> <!-- loc:last.name --></label>
+								</div>
+								<div class="col-md-2">
+									<input id="lname" name="lname" type="text" />
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-2">
+									<label for="email"> <!-- loc:email --></label>
+								</div>
+								<div class="col-md-2">
+									<input id="email" name="email" type="text" />
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-2">
+									<label for="phone"> <!-- loc:phone --></label>
+								</div>
+								<div class="col-md-2">
+									<input id="phone" name="phone" type="text" />
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-2">
+									<label for="cnp"> <!-- loc:cnp -->
+									</label>
+								</div>
+								<div class="col-md-2">
+									<input id="cnp" name="cnp" type="text" />
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-2">
+									<label for="region"> <!-- loc:region -->
+									</label>
+								</div>
+								<div class="col-md-2">
+									<input id="region" name="region" type="text" />
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-2">
+									<label for="city"> <!-- loc:city -->
+									</label>
+								</div>
+								<div class="col-md-2">
+									<input id="city" name="city" type="text" />
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-2">
+									<label for="address"> <!-- loc:address -->
+									</label>
+								</div>
+								<div class="col-md-2">
+									<input id="address" name="address" type="text" />
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-2">
+									<label for="zip"> <!-- loc:zip -->
+									</label>
+								</div>
+								<div class="col-md-2">
+									<input id="zip" name="zip" type="text" />
+								</div>
+							</div>
+							<div class="row">
+								<div class="select_cont">
+									<select id="transport_pf" class="transport" name="transport">
+										<option value="19.99"><!-- loc:transport.1 --></option>
+										<option value="9.99"><!-- loc:transport.2 --></option>
 									</select>
-									</span> <span>buc</span> <span><a id="add_to_cart_box"
-										class="cartt_small" href="#"> Șterge </a></span>
-
 								</div>
 							</div>
 
 
-						</div>
+							<div class="row">
+								<div id="terms_wrapper" class="col-md-12">
+									<input id="terms" name="terms" type="checkbox" /> <label
+										for="terms"> <!-- loc:terms.and.conds -->
+									</label>
+								</div>
+							</div>
+						</form>
 					</div>
-					<!-- end -->
 					<div class="row animate-box"></div>
 				</div>
 			</div>
