--- a/shopweb/web/products.html
+++ b/shopweb/web/products.html
@@ -10,8 +10,6 @@
 
 <!-- template:headers -->
 
-<script type="text/javascript" src="/static/js/products.js"></script>
-
 <title>idid.ro - Lista de produse handmade din categoria
 	selectata</title>
 </head>
@@ -57,7 +55,7 @@
 									<div class="desc">
 										<img alt="produs" />
 										<h3></h3>
-										<a href="#" class="cartt"><span class="icon-cart"></span>
+										<a href="#" class="cartt add_to_cart_box"><span class="icon-cart"></span>
 											Adaugă în coș</a>
 										<p></p>
 									</div>
@@ -74,6 +72,7 @@
 		<!-- template:footer -->
 	</div>
 	<!-- template:endscripts -->
+    <script src="/static/js/products.js"></script>
 </body>
 </html>
 
