--- a/shopweb/web/cart.html
+++ b/shopweb/web/cart.html
@@ -34,9 +34,8 @@
 						<div class="details">
 							<div class="row">
 								<span class="prod_desc"></span>
-								<div class="row">
-									Preț : <span class="prod_price"></span> 
-									<span> <select>
+								<div class="row top20">
+									Preț unitar: <span class="prod_price"></span> <span> <select>
 											<!-- snip:cantities -->
 											<option></option>
 											<!-- end -->
@@ -128,12 +127,10 @@
 								</div>
 							</div>
 							<div class="row">
-								<div class="select_cont">
-									<select id="transport_pf" class="transport" name="transport">
-										<option value="19.99"><!-- loc:transport.1 --></option>
-										<option value="9.99"><!-- loc:transport.2 --></option>
-									</select>
-								</div>
+								<select id="transport_pf" class="transport" name="transport">
+									<option value="19.99"><!-- loc:transport.1 --></option>
+									<option value="9.99"><!-- loc:transport.2 --></option>
+								</select>
 							</div>
 
 
