--- a/shopweb/web/cart.html
+++ b/shopweb/web/cart.html
@@ -26,6 +26,7 @@
 
 			<div id="fh5co-media-section">
 				<div class="container">
+					<!-- snip:empty -->
 					<!-- snip:cart_prods -->
 					<div class="row animate-box cart_item">
 						<div class="img_cont">
@@ -40,7 +41,7 @@
 											<option></option>
 											<!-- end -->
 									</select> buc
-									</span><span> <a class="cartt_small" href="#">Șterge</a>
+									</span><span> <a class="cartt_small cart_delete" href="#">Șterge</a>
 									</span>
 								</div>
 							</div>
@@ -141,8 +142,15 @@
 									</label>
 								</div>
 							</div>
+							<div class="row plata">
+								<span><a id="buy" class="cartt_small" href="#">Cumpăr</a></span>
+							</div>
+							<div class="row plata">
+								<span>Plata se va face ramburs.</span>
+							</div>
 						</form>
 					</div>
+					<!-- end -->
 					<div class="row animate-box"></div>
 				</div>
 			</div>
